[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Projectile.gd" type="Script" id=1]
[ext_resource path="res://Assets/Request pack (100 assets)/PNG/laserRedBurst.png" type="Texture" id=2]
[ext_resource path="res://Assets/sounds/laser4.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="Animation" id=2]
resource_name = "Burst"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("HitEffect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ null, ExtResource( 2 ), ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitEffect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.5, 0.5 ), Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitEffect:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 30.0, 150.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HitEffect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitEffect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitEffect:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Projectile" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="HitEffect" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )

[node name="OnHit" type="AnimationPlayer" parent="."]
anims/Burst = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.975
pitch_scale = 0.6
autoplay = true

[connection signal="animation_finished" from="OnHit" to="." method="_on_OnHit_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
